--- a/All Code/css/my-song.css
+++ b/All Code/css/my-song.css
@@ -1,57 +1,16 @@
-* {
-    font-family: Tahoma;
-    margin: 7px;
+.header{
+    background: rgba(110,132,143,0.19);
 }
-.song-item {
-    border: 1px solid rgba(13,23,20,0.2);
-    border-radius: 10px;
-}
-.song-item:after {
-    content: '';
-    clear: both;
-    display: table;
-}
-.song-index {
-    float: left;
-    width: 5%;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    padding-top: 2%;
-    padding-left: 1%;
-}
-.song-thumbnail {
-    float: left;
-    width: 10%;
-}
-.song-thumbnail img {
-    width: 100%;
-    border-radius: 10px;
-}
-.song-infor {
-    padding-top: 1%;
-    float: left;
-    width: 20%;
-}
-.song-infor .song-name {
+.header .link{
+    float: right;
+    padding-top: 80px;
+    padding-right: 100px;
     font-weight: bold;
 }
-.song-infor .song-singer {
-    font-weight: lighter;
-    color: rgba(0,0,23,0.47);
+a {
+    padding: 10px;
+    font-size: 25px;
 }
-.song-control {
-    padding-top: 3%;
-    color: dodgerblue;
-    cursor: pointer;
-    text-decoration: underline;
-    float: left;
-    width: 10%;
-}
-
-.song-detail {
-    float: left;
-    width: 50%;
-    padding-top: 0.5%;
-    font-weight: bold;
+img {
+    width: 200px;
 }
