--- a/All Code/css/register-song.css
+++ b/All Code/css/register-song.css
@@ -1,8 +1,45 @@
-input{
-    padding: 5px;
-    margin: 10px;
+.header{
+    background: rgba(110,132,143,0.19);
 }
-li{
-    font-size: 20px;
-    padding: 5px;
+.header .link{
+    float: right;
+    padding-top: 80px;
+    padding-right: 100px;
+    font-weight: bold;
+}
+a {
+    padding: 10px;
+    font-size: 25px;
+}
+img {
+    width: 200px;
+}
+input {
+    margin: 40px 25px;
+    width: 200px;
+    display: block;
+    border: none;
+    padding: 10px 0;
+    border-bottom: solid 1px #1abc9c;
+    transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 96%, #1abc9c 4%);
+    background-position: -200px 0;
+    background-size: 200px 100%;
+    background-repeat: no-repeat;
+    color: #0e6252;
+}
+form {
+    box-sizing: border-box;
+    width: 340px;
+    margin: 100px auto 0;
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
+    padding-bottom: 40px;
+    border-radius: 3px;
+}
+form .register{
+    color: #0e6252;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding-top: 10px;
 }
