Bài thi Assignment HTML

--- a/All Code/css/list-song.css
+++ b/All Code/css/list-song.css
@@ -392,7 +392,10 @@
         padding-left: 1%;
     }
     audio {
-        width: 50%;
+        width: 40%;
+        margin-top: 30px;
+        float: left;
+        margin-left: 50px;
     }
 
     .song-thumbnail {
@@ -432,8 +435,9 @@
     }
 
     .song-detail {
-        float: right;
-        width: 45%;
+        float: left;
+        margin-top: 30px;
+        width: 35%;
         padding-top: 0.5%;
         padding-right: 20px;
         font-weight: bold;
@@ -455,6 +459,7 @@
     }
 
     .header .link {
+        height: 20px;
         float: right;
         padding-top: 100px;
         padding-right: 30px;
